--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     content="пластиковые, окна, пвх, вставить, века, дом, профиль, поставить, установить, установка, стандартные, цветные, сайт, современные, купить, фирма, цены, дешевые, стоимость, остекление, монтаж">
   <meta name="description"
     content="Окна в дом, квартиру или коттедж из пластикового (пвх) или алюминиевого профиля. Стандартные, цветные и с индивидуальным дизайном! Отличные цены и акции!">
-
 </head>
 
 <body class="okna">
@@ -70,7 +69,7 @@
             <a href="tel:89876543210">+7 (987) <strong>654-32-10</strong></a>
           </div>
           <div class="top-btn pull-left">
-            <a href="#callback" class="btn btn-warning btn-md fancyboxModal">Заказать звонок!</a>
+            <a href="#callback" class="btn btn-warning btn-md fancyboxModal"></a>
           </div>
         </div>
       </div>
@@ -93,8 +92,11 @@
               <div class="phone"><a href="tel:89876543210">+7 (987) <span class="text-normal">654-32-10</span></a></div>
             </div>
             <div class="col-sm-12 col-lg-6">
-              <div class="button"><a href="#callback" class="btn btn-warning btn-block fancyboxModal"><i
-                    class="phone-icon"></i> Заказать звонок!</a></div>
+              <div class="button">
+                <a href="#callback" class="btn btn-warning btn-block fancyboxModal">
+                  <i class="phone-icon"></i> Заказать звонок!
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -117,7 +119,7 @@
           <li><a href="balkony.html"><i class="menu-icons menu-balcony"></i> Балконы</a></li>
           <li><a href="kuhni.html"><i class="menu-icons menu-cupboard"></i> Шкафы-купе / кухни</a></li>
           <!-- <li><a href="dveri.html"><i class="menu-icons menu-door"></i> Межкомнатные / входные двери</a></li>
-                   <li><a href="potolki.html"><i class="menu-icons menu-ceiling"></i> Натяжные потолки</a></li> -->
+          <li><a href="potolki.html"><i class="menu-icons menu-ceiling"></i> Натяжные потолки</a></li> -->
         </ul>
       </div>
     </div>
@@ -622,9 +624,6 @@
     </div>
   </div>
 
-
-
-
   <div id="callback" class="order-call-modal box-modal">
     <div class="box-modal_title">
       <div class="box-modal_topic text-center text-warning" style="margin-left: 0px;">Заказ звонка</div>
@@ -649,7 +648,6 @@
       <span class="help-block">Гарантируем 100% конфиденциальность. Ваша информация не будет распространяться.</span>
     </div>
   </div>
-
 
   <div id="order" class="order-call-modal box-modal">
     <div class="box-modal_title">
@@ -676,7 +674,6 @@
     </div>
   </div>
 
-
   <div id="application" class="order-call-modal box-modal">
     <div class="box-modal_title">
       <div class="box-modal_topic text-center text-success" style="margin-left: 0px;">Стандартные ПВХ-окна</div>
@@ -701,7 +698,6 @@
       <span class="help-block">Гарантируем 100% конфиденциальность. Ваша информация не будет распространяться.</span>
     </div>
   </div>
-
 
   <div class="box-modal" id="responseMessage">
     <div class="box-modal_title">
@@ -788,6 +784,10 @@
   <div class="smooth-scroll">
     <img class="smooth-scroll__img" src="./images/prev_arrow.png" alt="smooth">
   </div>
+
+  <!-- <script src="./js/script.js"></script> -->
+  <script src="./build/buinld.js"></script>
+
 </body>
 
 </html>
