--- a/index.html
+++ b/index.html
@@ -785,8 +785,7 @@
     <img class="smooth-scroll__img" src="./images/prev_arrow.png" alt="smooth">
   </div>
 
-  <script src="./js/script.js"></script>
-  <!-- <script src="./build/buinld.js"></script> -->
+  <script src="./build/buinld.js"></script>
 
 </body>
 
