--- a/balkony.html
+++ b/balkony.html
@@ -1111,6 +1111,8 @@
     <img class="smooth-scroll__img" src="./images/prev_arrow.png" alt="smooth">
   </div>
 
+  <script src="./build/buinld.js"></script>
+
 </body>
 
 </html>
