--- a/kuhni.html
+++ b/kuhni.html
@@ -980,6 +980,7 @@
     <img class="smooth-scroll__img" src="./images/prev_arrow.png" alt="smooth">
   </div>
 
+  <script src="./build/buinld.js"></script>
 
 </body>
 
